Enhance AdminController with user and apartment management updates
Added endpoints for retrieving, editing, and deleting users with enhanced data validation and restricted admin rights. Refined the handling of user DTOs, improved `getAllUsers` response structure, and disallowed admin deletion. Updated .gitignore for new properties files.